# handskrift

./: .gitignore  DHLAB_Transkribus.ipynb  README.md  fetch_sesamids.ipynb  handskrift.py  pylock.toml  pyproject.toml  requirements.txt
transkribus_API_wrapper/: export_pages_PAGE_ALTO.ipynb  sesamid_urn_mapping.ipynb  transkribus_API_IIIF_NB_pipeline.ipynb  transkribus_API_generic.ipynb
